--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -20,10 +20,7 @@
               </a>
             </div>
   
-            <p class="t-small">Buildngz is making finding commercial real estate services and products faster, easier, and customized for you.</p>
-          </div><!-- .col -->
-  
-          <div class="col-lg-2" style="text-align: left">
+            <p class="t-small">Buildngz makES finding commercial real estate services and products faster, easier, and customized for you.</p>
           </div><!-- .col -->
   
           <div class="col-lg-2" style="text-align: left">
@@ -40,22 +37,35 @@
           <div class="col-lg-2" style="text-align: left">
             <strong>BUSINESS SERVICES</strong>
             <ul class="min-list site-footer__links">
-              <li><a href="#">About Buildngz</a></li>
-              <li><a href="#">Careers</a></li>
-              <li><a href="#">Terms & Policies</a></li>
-              <li><a href="blog.html">Copyright Info</a></li>
-              <li><a href="blog.html">Mobile App</a></li>
+              <li><a href="#">For Pros</a></li>
+              <li><a href="#">Management Software</a></li>
+              <li><a href="#">For Brands</a></li>
+              <li><a href="blog.html">Trade Program</a></li>
+              <li><a href="blog.html">Button & Badges</a></li>
             </ul><!-- .main-navigation -->
           </div><!-- .col -->
   
           <div class="col-lg-2" style="text-align: left">
             <strong>GET HELP</strong>
             <ul class="min-list site-footer__links">
-              <li><a href="#">About Buildngz</a></li>
-              <li><a href="#">Careers</a></li>
-              <li><a href="#">Terms & Policies</a></li>
-              <li><a href="blog.html">Copyright Info</a></li>
-              <li><a href="blog.html">Mobile App</a></li>
+              <li><a href="#">Your Orders</a></li>
+              <li><a href="#">Shipping & Delivery</a></li>
+              <li><a href="#">Return Policy</a></li>
+              <li><a href="blog.html">Review Pros</a></li>
+              <li><a href="blog.html">Suggested Pros</a></li>
+              <li><a href="blog.html">Accessibility</a></li>
+              <li><a href="blog.html">Buildngz Support</a></li>
+            </ul><!-- .main-navigation -->
+          </div><!-- .col -->
+  
+          <div class="col-lg-2" style="text-align: left">
+            <strong>CONNECT WITH US</strong>
+            <ul class="min-list site-footer__links">
+              <li><a href="#">Buildngz Blog</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="blog.html">YouTube</a></li>
+              <li><a href="blog.html">RSS</a></li>
             </ul><!-- .main-navigation -->
           </div><!-- .col -->
   
