--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<header id="masthead" class="site-header site-header--layout-2 site-header--fluid">
+<header class="site-header site-header--layout-2 site-header--fluid">
   
     <div class="d-lg-flex justify-content-lg-between align-items-lg-center site-header__container">
       <!-- Error Messages -->
@@ -17,55 +17,58 @@
                   <a href="#"><b>GET IDEAS</b></a>
                   <ul class="min-list">
                     <li>
-                      <a href="listing-4.html">Architecture</a>
+                      <a href="{% url 'marketplace' %}">Architecture</a>
                     </li>
                     <li>
-                      <a href="listing-4.html">Interior Design</a>
+                      <a href="{% url 'marketplace' %}">Interior Design</a>
                     </li>
                     <li>
-                      <a href="listing-4.html">Landscaping</a>
+                      <a href="{% url 'marketplace' %}">Landscaping</a>
                     </li>
                     <li>
-                      <a href="listing-4.html">Kitched Design</a>
+                      <a href="{% url 'marketplace' %}">Kitched Design</a>
                     </li>
                     <li>
-                      <a href="listing-4.html">Software</a>
+                      <a href="{% url 'marketplace' %}">Software</a>
                     </li>
                   </ul>
                 </li>
                 <li>
                   <a href="#"><b>FIND PROS</b></a>
                   <ul class="min-list">
-                    <li><a href="listing-4.html">Architects & Building Designers</a></li>
-                    <li><a href="listing-4.html">Design-Build Firms</a></li>
-                    <li><a href="listing-4.html">General Contractors</a></li>
-                    <li><a href="listing-4.html">Home Builders</a></li>
-                    <li><a href="listing-4.html">Interior Designers</a></li>
-                    <li><a href="listing-4.html">Kitchen & Bath Designers</a></li>
-                    <li><a href="listing-4.html">Kitchen & Bath Remodelers</a></li>
-                    <li><a href="listing-4.html">Landscape Architects & Designers</a></li>
-                    <li><a href="listing-4.html">Landscape Contractors</a></li>
+                    <li><a href="{% url 'marketplace' %}">Architects & Building Designers</a></li>
+                    <li><a href="{% url 'marketplace' %}">Design-Build Firms</a></li>
+                    <li><a href="{% url 'marketplace' %}">General Contractors</a></li>
+                    <li><a href="{% url 'marketplace' %}">Home Builders</a></li>
+                    <li><a href="{% url 'marketplace' %}">Interior Designers</a></li>
+                    <li><a href="{% url 'marketplace' %}">Kitchen & Bath Designers</a></li>
+                    <li><a href="{% url 'marketplace' %}">Kitchen & Bath Remodelers</a></li>
+                    <li><a href="{% url 'marketplace' %}">Landscape Architects & Designers</a></li>
+                    <li><a href="{% url 'marketplace' %}">Landscape Contractors</a></li>
                   </ul>
                 </li>
                 <li>
                   <a href="#"><b>SHOP PRODUCTS</b></a>
                   <ul class="min-list">
                     <li>
-                      <a href="listing-4.html">Architecture</a>
+                      <a href="{% url 'marketplace' %}">Architecture</a>
                     </li>
                     <li>
-                      <a href="listing-4.html">Construction</a>
+                      <a href="{% url 'marketplace' %}">Construction</a>
                     </li>
                     <li>
-                      <a href="listing-4.html">Fire Remediation</a>
+                      <a href="{% url 'marketplace' %}">Fire Remediation</a>
                     </li>
                     <li>
-                      <a href="listing-4.html">Landscaping</a>
+                      <a href="{% url 'marketplace' %}">Landscaping</a>
                     </li>
                     <li>
-                      <a href="listing-4.html">Building Services</a>
+                      <a href="{% url 'marketplace' %}">Building Services</a>
                     </li>
                   </ul>
+                </li>
+                <li>
+                  <a href="{% url 'pricing' %}"><b>PRICING</b></a>
                 </li>
                 <li>
                   <a href="blog.html"><b>BLOG</b></a>
