--- a/templates/includes/v_header.html
+++ b/templates/includes/v_header.html
@@ -6,20 +6,20 @@
           <!-- LOGO -->
           <div class="navbar-brand-box">
               <a href="{% url 'vendorDashboard' %}" class="logo logo-dark">
-                  <span class="logo-sm">
+                  <!-- <span class="logo-sm">
                       <img src="{% static 'images/buildngz-sm-logo.png' %}" alt="" height="22">
-                  </span>
+                  </span> -->
                   <span class="logo-lg">
-                      <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="28">
+                      <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="40">
                   </span>
               </a>
 
               <a href="{% url 'vendorDashboard' %}" class="logo logo-light">
-                  <span class="logo-sm">
+                  <!-- <span class="logo-sm">
                       <img src="{% static 'images/buildngz-sm-logo.png' %}" alt="" height="22">
-                  </span>
+                  </span> -->
                   <span class="logo-lg">
-                      <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="28">
+                      <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="40">
                   </span>
               </a>
           </div>
