--- a/buildngz_main/static/styles/style.css
+++ b/buildngz_main/static/styles/style.css
@@ -394,8 +394,8 @@ html {
 
 .container {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 5px;
+  padding-left: 5px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -2559,7 +2559,7 @@ textarea,
 a {
   color: #222222;
   font-family: "Lato", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   /* font-size: 0.875rem; */
   font-weight: 400;
   line-height: 1.4;
@@ -16799,7 +16799,7 @@ a.pswp__share--download:hover {
 
 .bg-primary {
   /* background-color: #222222;  */
-  background-color: #222222; 
+  background-color: #007bb5; 
 }
 
 .bg-secondary {
@@ -17866,7 +17866,7 @@ a.pswp__share--download:hover {
 
 .listing__detail {
   padding: 20px;
-  border: 1px solid #eeeeee;
+  border: 1px solid #ffffff;
 }
 
 .listing__title {
@@ -18091,14 +18091,14 @@ a.pswp__share--download:hover {
 }
 
 .listing-header__detail .listing__score {
-  font-size: 12px;
-  font-size: 0.75rem;
-  width: 26px;
-  height: 26px;
-  border-color: #fcc400;
-  background-color: #fcc400;
-  color: #222222;
-  line-height: 26px;
+  font-size: 16px;
+  font-size: 1rem;
+  width: 30px;
+  height: 30px;
+  border-color: #ff0404;
+  background-color: #ff0404;
+  color: #ffffff;
+  line-height: 30px;
 }
 
 .listing-widget {
@@ -18246,6 +18246,11 @@ a.pswp__share--download:hover {
   margin-bottom: 10px;
 }
 
+.listing-section__subtitle {
+  font-size: 18px;
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
 @media screen and (min-width: 576px) {
   .listing-section__title {
     margin-bottom: 0;
@@ -18346,8 +18351,8 @@ a.pswp__share--download:hover {
 
 @media screen and (min-width: 768px) {
   .listing-menu {
-    -webkit-column-count: 2;
-            column-count: 2;
+    -webkit-column-count: 1;
+            column-count: 1;
     -webkit-column-gap: 30px;
             column-gap: 30px;
   }
@@ -18468,7 +18473,7 @@ a.pswp__share--download:hover {
 
 .listing-header-bg {
   height: 280px;
-  background-image: url("../images/uploads/listing-bg.jpg");
+  background-image: url("../images/uploads/buildngz-listings-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -18735,8 +18740,32 @@ a.pswp__share--download:hover {
 }
 
 @media screen and (min-width: 1200px) {
+  .listing-column--xl-30 {
+    width: 30%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .listing-column--xl-40 {
+    width: 40%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .listing-column--xl-50 {
     width: 50%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .listing-column--xl-60 {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .listing-column--xl-70 {
+    width: 70%;
   }
 }
 
@@ -19931,7 +19960,7 @@ a.pswp__share--download:hover {
 
 .stars-inner:before {
   content: '\f005 \f005 \f005 \f005 \f005';
-  color: #fcc400;
+  color: #ff0404;
 }
 
 .stars {
@@ -19942,11 +19971,11 @@ a.pswp__share--download:hover {
 }
 
 .star.hover {
-  color: #fcc400;
+  color: #ff0404;
 }
 
 .star.is-selected {
-  color: #fcc400;
+  color: #ff0404;
 }
 
 .map-controls {
