--- a/templates/accounts/customerDashboard.html
+++ b/templates/accounts/customerDashboard.html
@@ -2,166 +2,237 @@
 
 {% block content%}
 <div class="page-content">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-3">
-          {% include 'includes/c_sidebar.html' %}
-        </div><!-- .col -->
-  
-        <div class="col-lg-9">
-            {% include 'includes/alerts.html' %}
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3">
+        {% include 'includes/c_sidebar.html' %}
+      </div><!-- .col -->
 
-            <table class="listing-table">
-            <tr class="listing-row c-white bg-primary">
-              <th>
-                <i class="fa fa-clipboard"></i>
-                Listings
-              </th>
-              <th>
-                <i class="fa fa-calendar-alt"></i>
-                Expiration Date
-              </th>
-              <th></th>
-            </tr><!-- .listing-row -->
-            <tr class="listing-row">
-              <td class="listing listing-cell">
-                <div class="listing__wrapper">
-                  <div class="listing__thumbnail">
-                    <a href="single-listing-1.html">
-                      <img src="assets/images/uploads/listing-1.jpg" alt="April Boutique Coffee">
-                    </a>
-                  </div><!-- .listing__thumbnail -->
-                  <div class="listing__detail">
-                    <h3 class="listing__title">
-                      <a href="single-listing-1.html">April Boutique Coffee</a>
-                    </h3>
-                    <p class="listing__review c-dusty-gray">
-                      <span class="stars-outer" data-rating="4.8">
-                        <span class="stars-inner"></span>
-                      </span>
-                      <span>(5 Reviews)</span>
-                    </p>
-                    <p class="listing__location c-dusty-gray">
-                      <i class="fa fa-map-marker"></i>
-                      18 Leinster Terr, Paddington
-                    </p>
-                  </div><!-- .listing__detail -->
+      <div class="col-lg-9">
+          {% include 'includes/alerts.html' %}
+
+          <!-- Counter START -->
+          <div class="row g-4 mb-5">
+            <!-- Counter item -->
+            <div class="col-md-3 col-xxl-3">
+              <div class="card card-body shadow p-4">
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                  <!-- Number -->
+                  <div class="me-2">
+                    <span>New Booked Rooms</span>
+                    <h3 class="mb-0 mt-2">54</h3>
+                  </div>
+                  <!-- Icon -->
+                  <div class="icon-lg rounded-circle flex-shrink-0 bg-primary bg-opacity-10 text-primary mb-0">
+                    <i class="bi bi-door-open fa-fw"></i>
+                  </div>
                 </div>
-              </td>
-              <td>December 18, 2018</td>
-              <td class="listing-action">
-                <ul class="min-list">
-                  <li>
-                    <button class="action edit" type="button">
-                      <i class="fa fa-pencil"></i>
-                      Edit
-                    </button>
-                  </li>
-  
-                  <li>
-                    <button class="action remove" type="button">
-                      <i class="fa fa-trash"></i>
-                      Remove
-                    </button>
-                  </li>
-                </ul>
-              </td>
-            </tr><!-- .listing-row -->
-  
-            <tr class="listing-row">
-              <td class="listing listing-cell">
-                <div class="listing__wrapper">
-                  <div class="listing__thumbnail">
-                    <a href="single-listing-1.html">
-                      <img src="assets/images/uploads/listing-2.jpg" alt="April Boutique Coffee">
-                    </a>
-                  </div><!-- .listing__thumbnail -->
-                  <div class="listing__detail">
-                    <h3 class="listing__title">
-                      <a href="single-listing-1.html">April Boutique Coffee</a>
-                    </h3>
-                    <p class="listing__review c-dusty-gray">
-                      <span class="stars-outer" data-rating="4.5">
-                        <span class="stars-inner"></span>
-                      </span>
-                      <span>(5 Reviews)</span>
-                    </p>
-                    <p class="listing__location c-dusty-gray">
-                      <i class="fa fa-map-marker"></i>
-                      18 Leinster Terr, Paddington
-                    </p>
-                  </div><!-- .listing__detail -->
+              </div>	
+            </div>
+
+            <!-- Counter item -->
+            <div class="col-md-3 col-xxl-3">
+              <div class="card card-body shadow p-4">
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                  <!-- Number -->
+                  <div class="me-2">
+                    <span>Cancelled Rooms</span>
+                    <h3 class="mb-0 mt-2">12</h3>
+                  </div>
+                  <!-- Icon -->
+                  <div class="icon-lg rounded-circle flex-shrink-0 bg-danger bg-opacity-10 text-danger mb-0">
+                    <i class="bi bi-x-circle fa-fw"></i>
+                  </div>
                 </div>
-              </td>
-              <td>December 18, 2018</td>
-              <td class="listing-action">
-                <ul class="min-list">
-                  <li>
-                    <button class="action edit" type="button">
-                      <i class="fa fa-pencil"></i>
-                      Edit
-                    </button>
-                  </li>
-  
-                  <li>
-                    <button class="action remove" type="button">
-                      <i class="fa fa-trash"></i>
-                      Remove
-                    </button>
-                  </li>
-                </ul>
-              </td>
-            </tr><!-- .listing-row -->
-  
-            <tr class="listing-row">
-              <td class="listing listing-cell">
-                <div class="listing__wrapper">
-                  <div class="listing__thumbnail">
-                    <a href="single-listing-1.html">
-                      <img src="assets/images/uploads/listing-3.jpg" alt="April Boutique Coffee">
-                    </a>
-                  </div><!-- .listing__thumbnail -->
-                  <div class="listing__detail">
-                    <h3 class="listing__title">
-                      <a href="single-listing-1.html">April Boutique Coffee</a>
-                    </h3>
-                    <p class="listing__review c-dusty-gray">
-                      <span class="stars-outer" data-rating="4">
-                        <span class="stars-inner"></span>
-                      </span>
-                      <span>(5 Reviews)</span>
-                    </p>
-                    <p class="listing__location c-dusty-gray">
-                      <i class="fa fa-map-marker"></i>
-                      18 Leinster Terr, Paddington
-                    </p>
-                  </div><!-- .listing__detail -->
+              </div>	
+            </div>
+
+            <!-- Counter item -->
+            <div class="col-md-3 col-xxl-3">
+              <div class="card card-body shadow p-4">
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                  <!-- Number -->
+                  <div class="me-2">
+                    <span>Check-in</span>
+                    <h3 class="mb-0 mt-2">20</h3>
+                  </div>
+                  <!-- Icon -->
+                  <div class="icon-lg rounded-circle flex-shrink-0 bg-success bg-opacity-10 text-success mb-0">
+                    <i class="bi bi-box-arrow-in-right fa-fw"></i>
+                  </div>
                 </div>
-              </td>
-              <td>December 18, 2018</td>
-              <td class="listing-action">
-                <ul class="min-list">
-                  <li>
-                    <button class="action edit" type="button">
-                      <i class="fa fa-pencil"></i>
-                      Edit
-                    </button>
-                  </li>
-  
-                  <li>
-                    <button class="action remove" type="button">
-                      <i class="fa fa-trash"></i>
-                      Remove
-                    </button>
-                  </li>
-                </ul>
-              </td>
-            </tr><!-- .listing-row -->
-           </table><!-- .listing-table -->
-        </div><!-- .col -->
-      </div><!-- .row -->
-    </div><!-- .container -->
-  </div><!-- .page-content -->
-  
+              </div>	
+            </div>
+
+            <!-- Counter item -->
+            <div class="col-md-3 col-xxl-3">
+              <div class="card card-body shadow p-4">
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                  <!-- Number -->
+                  <div class="me-2">
+                    <span>Check-out</span>
+                    <h3 class="mb-0 mt-2">28</h3>
+                  </div>
+                  <!-- Icon -->
+                  <div class="icon-lg rounded-circle flex-shrink-0 bg-orange bg-opacity-10 text-orange mb-0">
+                    <i class="bi bi-box-arrow-right fa-fw"></i>
+                  </div>
+                </div>
+              </div>	
+            </div>
+          </div>
+          <!-- Counter END -->
+          <br><br>
+          <table class="listing-table">
+          <tr class="listing-row c-white bg-primary">
+            <th>
+              <i class="fa fa-clipboard"></i>
+              Listings
+            </th>
+            <th>
+              <i class="fa fa-calendar-alt"></i>
+              Expiration Date
+            </th>
+            <th></th>
+          </tr><!-- .listing-row -->
+          <tr class="listing-row">
+            <td class="listing listing-cell">
+              <div class="listing__wrapper">
+                <div class="listing__thumbnail">
+                  <a href="single-listing-1.html">
+                    <img src="assets/images/uploads/listing-1.jpg" alt="April Boutique Coffee">
+                  </a>
+                </div><!-- .listing__thumbnail -->
+                <div class="listing__detail">
+                  <h3 class="listing__title">
+                    <a href="single-listing-1.html">April Boutique Coffee</a>
+                  </h3>
+                  <p class="listing__review c-dusty-gray">
+                    <span class="stars-outer" data-rating="4.8">
+                      <span class="stars-inner"></span>
+                    </span>
+                    <span>(5 Reviews)</span>
+                  </p>
+                  <p class="listing__location c-dusty-gray">
+                    <i class="fa fa-map-marker"></i>
+                    18 Leinster Terr, Paddington
+                  </p>
+                </div><!-- .listing__detail -->
+              </div>
+            </td>
+            <td>December 18, 2018</td>
+            <td class="listing-action">
+              <ul class="min-list">
+                <li>
+                  <button class="action edit" type="button">
+                    <i class="fa fa-pencil"></i>
+                    Edit
+                  </button>
+                </li>
+
+                <li>
+                  <button class="action remove" type="button">
+                    <i class="fa fa-trash"></i>
+                    Remove
+                  </button>
+                </li>
+              </ul>
+            </td>
+          </tr><!-- .listing-row -->
+          <tr class="listing-row">
+            <td class="listing listing-cell">
+              <div class="listing__wrapper">
+                <div class="listing__thumbnail">
+                  <a href="single-listing-1.html">
+                    <img src="assets/images/uploads/listing-2.jpg" alt="April Boutique Coffee">
+                  </a>
+                </div><!-- .listing__thumbnail -->
+                <div class="listing__detail">
+                  <h3 class="listing__title">
+                    <a href="single-listing-1.html">April Boutique Coffee</a>
+                  </h3>
+                  <p class="listing__review c-dusty-gray">
+                    <span class="stars-outer" data-rating="4.5">
+                      <span class="stars-inner"></span>
+                    </span>
+                    <span>(5 Reviews)</span>
+                  </p>
+                  <p class="listing__location c-dusty-gray">
+                    <i class="fa fa-map-marker"></i>
+                    18 Leinster Terr, Paddington
+                  </p>
+                </div><!-- .listing__detail -->
+              </div>
+            </td>
+            <td>December 18, 2018</td>
+            <td class="listing-action">
+              <ul class="min-list">
+                <li>
+                  <button class="action edit" type="button">
+                    <i class="fa fa-pencil"></i>
+                    Edit
+                  </button>
+                </li>
+
+                <li>
+                  <button class="action remove" type="button">
+                    <i class="fa fa-trash"></i>
+                    Remove
+                  </button>
+                </li>
+              </ul>
+            </td>
+          </tr><!-- .listing-row -->
+
+          <tr class="listing-row">
+            <td class="listing listing-cell">
+              <div class="listing__wrapper">
+                <div class="listing__thumbnail">
+                  <a href="single-listing-1.html">
+                    <img src="assets/images/uploads/listing-3.jpg" alt="April Boutique Coffee">
+                  </a>
+                </div><!-- .listing__thumbnail -->
+                <div class="listing__detail">
+                  <h3 class="listing__title">
+                    <a href="single-listing-1.html">April Boutique Coffee</a>
+                  </h3>
+                  <p class="listing__review c-dusty-gray">
+                    <span class="stars-outer" data-rating="4">
+                      <span class="stars-inner"></span>
+                    </span>
+                    <span>(5 Reviews)</span>
+                  </p>
+                  <p class="listing__location c-dusty-gray">
+                    <i class="fa fa-map-marker"></i>
+                    18 Leinster Terr, Paddington
+                  </p>
+                </div><!-- .listing__detail -->
+              </div>
+            </td>
+            <td>December 18, 2018</td>
+            <td class="listing-action">
+              <ul class="min-list">
+                <li>
+                  <button class="action edit" type="button">
+                    <i class="fa fa-pencil"></i>
+                    Edit
+                  </button>
+                </li>
+
+                <li>
+                  <button class="action remove" type="button">
+                    <i class="fa fa-trash"></i>
+                    Remove
+                  </button>
+                </li>
+              </ul>
+            </td>
+          </tr><!-- .listing-row -->
+         </table><!-- .listing-table -->
+
+      </div><!-- .col -->
+    </div><!-- .row -->
+  </div><!-- .container -->
+</div><!-- .page-content -->	
 {% endblock %}
  
