--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Buildngz</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}">
     <link href="https://fonts.googleapis.com/css?family=lato:400,600" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
     <link rel="stylesheet" href="{% static 'styles/custom.css' %}">
     <link rel="stylesheet" href="{% static 'styles/codebase.css' %}">
-    <script src="https://kit.fontawesome.com/04413a34db.js" crossorigin="anonymous"></script>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <script src="https://kit.fontawesome.com/04413a34db.js" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutocomplete" async defer></script>
     <script src="{% static 'scripts/custom.js' %}"></script>
 </head>
