--- a/templates/v_base.html
+++ b/templates/v_base.html
@@ -11,7 +11,7 @@
         <meta content="Buildngz Pro Admin & Dashboard" name="description" />
         <meta content="Buildngz" name="author" />
         <!-- App favicon -->
-        <link rel="shortcut icon" href="{% static 'vendor/images/favicon.ico' %}">
+        <link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
 
         <!-- <link href="{% static 'styles/style.css' %}" rel="stylesheet" type="text/css" /> -->
         <!-- <link href="{% static 'vendor/styles/MetroJs.Full/MetroJs.min.css' %}" rel="stylesheet" type="text/css" /> -->
